--- a/src/supermarket/karyawan/FormKaryawan.form
+++ b/src/supermarket/karyawan/FormKaryawan.form
@@ -412,13 +412,13 @@
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="txtKeyWord" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                              <Component id="txtCari" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="txtAddEmployee" alignment="3" max="32767" attributes="0"/>
                               <Component id="txtEditEmployee" alignment="3" max="32767" attributes="0"/>
                               <Component id="txtDelEmployee" alignment="3" max="32767" attributes="0"/>
-                              <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                                  <Component id="txtKeyWord" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                                  <Component id="txtCari" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
                           </Group>
                       </Group>
                     </DimensionLayout>
