--- a/src/supermarket/jamkerja/FormJamKerja.form
+++ b/src/supermarket/jamkerja/FormJamKerja.form
@@ -427,17 +427,17 @@
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="txtKeyWord" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                              <Component id="txtCari" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="cbCategory" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtbarangbuang1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtbarangbaru" alignment="3" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="txtbarangbuang" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txteditkaryawan" alignment="3" max="32767" attributes="0"/>
-                              <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                                  <Component id="txtKeyWord" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                                  <Component id="txtCari" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                                  <Component id="cbCategory" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="txtbarangbuang1" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="txtbarangbaru" alignment="3" max="32767" attributes="0"/>
-                              </Group>
                           </Group>
                       </Group>
                     </DimensionLayout>
